Fixes products page layout issue and adds images to gallery.

--- a/actualProducts.css
+++ b/actualProducts.css
@@ -17,6 +17,46 @@
     overflow: visible;
 }
 
+.category5 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-style: solid;
+    border-width: 5px;
+    border-color: #032d3d;
+    border-radius: 8px;
+    width: 250px;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+    position: relative;
+    z-index: 2;
+    box-shadow: 10px 10px 10px;
+    transition: all 0.5s ease;
+}
+
+.slide-in-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    position: absolute;
+    bottom: -100%;
+    left: 0;
+    width: 250px;
+    height: 300px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 20px;
+    box-sizing: border-box;
+    transition: bottom 0.3s ease-in-out;
+    font-size: 22px;
+}
+
+.category5:hover .slide-in-content {
+    bottom: 0;
+}
+
 .category1, .category2, .category3, .category4 {
     display: flex;
     align-items: center;
@@ -134,6 +174,57 @@
 
 .embroidery {
     display: flex;
+}
+
+/* Added Email Form Styles ZW */
+
+.contact-form-container {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #04364A;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 300px;
+}
+
+.contact-form input,
+.contact-form textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.contact-form h2 {
+    text-align: center;
+}
+
+.submit-button {
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
 }
 
 @media (max-width: 768px) {
