--- a/tabs.css
+++ b/tabs.css
@@ -5,11 +5,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 180px;
 }
 
 .ImagesContainer {
     display: flex;
-    background-color: #032d3d;
+    background-color: #04364A;
 }
 
 .content-container .tab-content {
@@ -45,7 +46,7 @@
     text-align: center;
     font-family: 'Poppins', sans-serif;
     font-size: 21px;
-    box-shadow: 0 6px 12px #032d3d;
+    box-shadow: 0 6px 12px #04364A;
     padding: 5px;
 }
 
@@ -71,21 +72,21 @@
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: 0 3px 6px #032d3d;
+    box-shadow: 0 3px 6px #04364A;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     flex: 1;
 }
 
 .step:hover {
     transform: translateY(-5px);
-    box-shadow: 0 6px 12px #032d3d;
+    box-shadow: 0 6px 12px #04364A;
 }
 
 /* Step number style */
 .step-number {
     width: 40px;
     height: 40px;
-    background-color: #032d3d;
+    background-color: #04364A;
     color: white;
     border-radius: 50%;
     display: flex;
@@ -132,7 +133,7 @@
 }
 
 .tab-button {
-    width: 180px;                 /* Fixed width for all buttons */
+    width: 200px;                 /* Fixed width for all buttons */
     height: 55px;                 /* Fixed height for all buttons */
     margin-right: 5px;
     border: 1px solid #ccc;
@@ -183,6 +184,57 @@
 
 .Filter h2 {
     font-size: 30px;
+}
+
+/* Added CSS For Email Form ZW */
+
+.contact-form-container {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #04364A;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 300px;
+}
+
+.contact-form input,
+.contact-form textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.contact-form h2 {
+    text-align: center;
+}
+
+.submit-button {
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
 }
 
 @media (max-width: 768px) {
